clean code: update imports, remove comments, simplify variables
FireStationMapper.java:
 - simplify direct returns.
 - replace collect(Collectors.toList()) with toList() method.
 - update imports.
 - add Javadoc